- Adjusted the .home header messages to be more differentiated in their hierarchy - Adjusted the styling of the sub-pages - Added a horizontal logo graphic (not used at the moment) - Fixed the side-scrolling bug on iPad portrait, caused by the left-aligned tweet button push to the right.

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -13,7 +13,7 @@ body
   background-color: darken(white, 5%)
 
 bold, strong
-  font-weight: $weight-bold   
+  font-weight: $weight-bold
 
 .container
   +container
@@ -25,7 +25,18 @@ bold, strong
     +container
   +at-breakpoint(45em 9)
     +container
+
+.home .container
+  +at-breakpoint(45em 9)
     background-color: transparent
+
+article
+  +at-breakpoint(45em 9)
+    font-size: 1.4em
+    header p.summary
+      padding: 0.85em /* 1.4 * 0.875 */
+      margin: -0.85em /* */
+      margin-bottom: 1em
   
 img, video, embed, object
   max-width: 100%
@@ -156,30 +167,37 @@ header
   +at-breakpoint(45em 9)
     margin: -1em
     background-image: -moz-radial-gradient(12.5em 10em, circle closest-side, white, white 8em, darken(white, 5%) 11em)
-    background-image: -webkit-radial-gradient(12.5em 11em, circle closest-side, white, white 9em, darken(white, 5%) 12em)
+    background-image: -webkit-radial-gradient(14.5em 11em, circle closest-side, white, white 9em, darken(white, 5%) 12em)
     background-image: -o-radial-gradient(12.5em 40%, circle closest-side, white, white 8em, darken(white, 5%) 11em)
     background-image: -ms-radial-gradient(12.5em 40%, circle closest-side, white, white 8em, darken(white, 5%) 11em)
     background-image: radial-gradient(12.5em 40%, circle closest-side, white, white 8em, darken(white, 5%) 11em)
     +clearfix
     
-    padding-left: 25em
+    padding-left: 23em
+    padding-right: 2em
     padding-top: 4em
 
     img
       max-width: 18em
-      margin-left: -22em
+      margin-left: -18em
       float: left
     p.location-date
       font-size: 1.8em
+      color: #333
       span.location, span.date
         display: block
         margin: 0
         padding-right: 0
     p.tagline
-      font-size: 1.8em
+      color: #777
+      font-size: 1.2em
+      line-height: 1.2em
+      padding: 0 4em
+      margin-bottom: 2em
       float: right
     p.theme
-      +replace-text('../img/theme-bubble@2x.png')
+      +hide-text()
+      background: url(../img/theme-bubble@2x.png) no-repeat top left
       width: 167px
       height: 197px
       background-size: 167px 197px
@@ -200,7 +218,7 @@ footer
   .twitter-follow-button
     margin-bottom: 1em
   +at-breakpoint(45em 7)
-    background-color: transparent
+    +clearfix
     h2
       +span-columns(2, 7)
       font-size: 1.6em
@@ -210,18 +228,27 @@ footer
     #subscribe
       +span-columns(5 omega, 7)
 
+.home footer
+  +at-breakpoint(45em 7)
+    background-color: transparent
+  
+
 #promovideo
   margin: 0 auto
+  padding-bottom: 2.5em
+  position: relative
   .twitter-share-button
     margin-top: 0.5em
+    position: absolute
+    bottom: 0
+    right: 0
   +at-breakpoint(45em 9)
-    position: relative
     margin: 0 -1em 1em
+    padding-bottom: 0
     .twitter-share-button
       margin-top: 0.5em
-      position: absolute
       top: -3em
-      right: -2em
+      bottom: auto
 
 p.note
   font-size: 0.6875em /* 11 / 16 = 0.6875 */
